<resources>
    <string name="app_name">KotlinLayout</string>
    <string name="hidden">Hidden</string>
    <string name="button">Button</string>
    <string name="text">¡Hi I am Luis!.</string>
    <string name="name">Name</string>
    <string name="next">next</string>
    <string name="todo">TODO</string>
    <string name="back">back</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="result">=</string>

    <string name="reset">Reset Values</string>
    <string name="text_view">0</string>

    <string name="description">Description of the fruit</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_accept">Accept</string>

    <string name="hint_name">Name</string>
    <string name="hint_cellphone">Cellphone</string>
    <string name="hint_email">Email</string>


    <string name="btn_n1">Button 1</string>
    <string name="btn_n2">Button 2</string>
    <string name="btn_n3">Button 3</string>
    <string name="btn_n4">Button 4</string>
    <string name="btn_n5">Button 5</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="staticFragment">Welcome to StaticFragments</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="hint_password">Password</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="design_adaptable">Design Adaptable</string>
    <string name="design_adaptable2">Design Adaptable 2</string>
    <string name="table_layout">Table Layout</string>
    <string name="text_input_layout">TextInput Layout</string>
    <string name="scroll_view">ScrollView</string>
    <string name="static_fragment">Static Fragment</string>
    <string name="dynamic_fragment">Dynamic Fragment</string>
    <string name="interoperability">Interoperability</string>
</resources>
