<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_design_adaptable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/design_adaptable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_frame_layout" />

    <Button
        android:id="@+id/btn_design_adaptable2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/design_adaptable2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_design_adaptable" />

    <Button
        android:id="@+id/btn_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_design_adaptable2" />

    <Button
        android:id="@+id/btn_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_table_layout" />

    <Button
        android:id="@+id/btn_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_text_input_layout" />

    <Button
        android:id="@+id/btn_static_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/static_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_scroll_view" />

    <Button
        android:id="@+id/btn_dynamic_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dynamic_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_static_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>