<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DesignAdaptableActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:autofillHints=""
            android:ems="11"
            android:inputType="textPersonName"
            android:hint="@string/name"/>

        <Button
            android:id="@+id/btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@id/et_name"
            android:layout_alignParentEnd="true"
            android:background="@color/colorAccent"
            android:text="@string/button" />

        <EditText
            android:id="@+id/et_two"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/text" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/strawberry"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btn_back"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_launcher_foreground"
            android:text="@string/button" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/mangoes"
            android:text="@string/next" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>