<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context=".ScrollViewActivity"
    android:id="@+id/scroll_view">

    <LinearLayout
        android:id="@+id/linear_layout_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/banana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/banana" />

        <ImageButton
            android:id="@+id/cherry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/cherry" />

        <ImageButton
            android:id="@+id/strawberry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/strawberry" />

        <ImageButton
            android:id="@+id/kiwi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/kiwi" />

        <ImageButton
            android:id="@+id/apples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/apples" />

        <ImageButton
            android:id="@+id/oranges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/oranges" />

        <ImageButton
            android:id="@+id/melon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/melon" />

        <ImageButton
            android:id="@+id/pineapple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/pineapple" />

        <ImageButton
            android:id="@+id/pear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/pear" />

        <ImageButton
            android:id="@+id/blackberry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/blackberry" />

        <ImageButton
            android:id="@+id/watermelon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/watermelon" />

        <ImageButton
            android:id="@+id/grapes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/grapes" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next">

        </Button>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back">

        </Button>
    </LinearLayout>
</ScrollView>